# WinFi

./: .gitignore  CMakeLists.txt  README.md  WinFi.cproj  WinFi.sln  WinFi.userprefs  main.cpp
.github/workflows/: release.yml  smoke_test.yml
